static/landing/style-tmp.css
/* ... */
.getStarted:hover {
    background-color: #6b4fc1;
}

.container img:nth-child(3) {
    display: none;
}

.typography {
    display: flex;
    flex-direction: column;
    gap: 0px;
    line-height: 70px;
    align-items: center;
    text-align: center;
    width: 100%;
}

.h1hero {
    max-width: 1206px;
    font-size: 48px;
    font-weight: bold;
    letter-spacing: -3%;
    margin-top: 72px;
}

.phero {
    font-size: 20px;
    font-weight: 400;
    line-height: 135%;
    letter-spacing: -3%;
    text-align: center;
    /* width: 58%; */
    text-transform: capitalize;
    color: rgba(0, 0, 0, 0.7);
    ;
}

.highlight {
    color: #9400FF;
}

.heroButton {
    display: flex;
    align-items: center;
    justify-content: center;
}

#heroButton {
    display: flex;
    align-items: center;
    margin-top: 32px;
    gap: 10px;
}

.PlaceholderContainer {
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    /* margin-top: 32px; */
    min-height: 300px;
}

.Placeholder {
    background: #d9d9d9;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    width: 224px;
    height: 100%;
    padding: 230px 317px 230px 317px;
    gap: 10px;
    border-radius: 8px;
    opacity: 0px;
}

.Placeholder-mob {
    /* background: #d9d9d9; */
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    width: 224px;
    height: 100%;
    padding: 230px 317px 230px 317px;
    gap: 10px;
    border-radius: 8px;
    opacity: 0px;
}

.heroButton {
    position: relative;
    width: fit-content;
}

.top {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    width: 100%;
    position: relative;
    top: -30px;
}

.arrow {
    position: absolute;
    left: -120px;
}

.lines {
    position: absolute;
    left: 35%;
    z-index: -1;
    opacity: 50%;
}

.hero {
    position: relative;
}

.ellipse2 {
    width: 250px;
    position: absolute;
    top: 10%;
    left: 3%;
    z-index: -1;
    filter: blur(160px);
}

.ellipse1 {
    position: absolute;
    top: 70%;
    left: 82%;
    z-index: -99;
    filter: blur(100px);
}

.portfoliotext {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    width: 100%;
    position: relative;
    /* margin-top: 100px; */
    margin-top: 25px;
    margin-bottom: 48px;
}

.portfoliotext h2 {
    font-family: 'Montserrat', sans-serif;
    font-size: 2.25rem;
    font-weight: 700;
    line-height: 43.88px;
    letter-spacing: -0.01em;
    text-align: left;
    margin-bottom: -20px;
    margin-top: 0px;
}

.highlight-p {
    margin-bottom: -2px;

}

.for-margin {
    margin-top: 0px;
}

.for-marg {
    margin-bottom: 8px;
}

/* .grid-container {
    display: grid;
    grid-template-columns: repeat(3, 419px);
    grid-template-rows: repeat(2, 419px);
    gap: 20px;
    height: fit-content;
    margin-left: 72px;
    margin-right: 72px;
    padding: 0px;
  } */

.grid-container {
    display: grid;
    grid-template-columns: repeat(3, 419px);
    gap: 20px;
    margin-left: 72px;
    margin-right: 72px;
    padding: 0;
}

.subtitle {
    font-size: 2rem;
    font-weight: 600;
    text-align: center;
    margin: 20px 0;
}

.mobile-sub-head {
    display: none;
}

.grid-item {
    display: flex;
    align-items: center;
    justify-content: center;
    /* background: #d9d9d9; */
    text-align: center;
}

.youtube-video {
    /* width: 100%;
    height: 100%; */
    /* max-width:200px; */
    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); */
    width: 100%;
    /* Full width of the container */
    max-width: 500px;
    /* Set a maximum width */
    height: auto;
}

.tiktok-video {
    width: 350px;
    /* Adjust to desired width */
    object-fit: cover;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
}

.facebook-video {
    width: 100%;
    /* object-fit: cover; */
    height: auto;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
}

.grid {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    width: 100%;
}

.img-size {
    width: 60px;
    height: auto;
}

.hiwText {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    width: 100%;
    margin-top: 90px;
    margin-bottom: 48px;
}

.hiwText h2 {
    font-family: 'Montserrat', sans-serif;
    font-size: 2.25rem;
    font-weight: 700;
    line-height: 43.88px;
    letter-spacing: -0.01em;
    text-align: left;
}

.hiwGridContainer {
    display: grid;
    grid-template-columns: repeat(2, 430px);
    grid-template-rows: repeat(6, 288px);
    column-gap: 107px;
    row-gap: 48px;
    width: 70%;
    height: fit-content;
    padding: 20px;
}

.hiw-grid-item {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background: #d9d9d9;
    text-align: left;
}

.hiwGrid {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    width: 100%;
}

.hiw-text-heading {
    font-size: 1.5rem;
    font-weight: 700;
    line-height: 27px;
    letter-spacing: -3%;
    text-align: left;
}

.white {
    background: #ffffff;
}

.width {
    margin-right: 150px;
}

.width-2 {
    margin-right: 60px;
}

.width-3 {
    margin-right: 60px;
}

.howitworks {
    position: relative;
}

.hiwbackgroundtl {
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
    filter: blur(100px);
}

.hiwbackgroundmr {
    position: absolute;
    top: 125vh;
    left: 80vw;
    z-index: 1;
    filter: blur(100px);
}

.hiwbackgroundml {
    position: absolute;
    top: 175vh;
    left: 0vw;
    z-index: 1;
    filter: blur(100px);
}

.hiwbackgroundbr {
    position: absolute;
    top: 300vh;
    left: 80vw;
    z-index: 1;
    filter: blur(100px);
}

.pricing {
    margin-top: 0px;
}
/* ... */

